--- a/odoo/local-src/sf_drone_info/views/product_drone_info.xml
+++ b/odoo/local-src/sf_drone_info/views/product_drone_info.xml
@@ -5,10 +5,10 @@
         -->
 
         <record id="view_sf_product_drone_info_form_inherit" model="ir.ui.view">
-            <field name="name">product.template.product.form</field>
-            <field name="model">product.template</field>
+            <field name="name">product.drone.info.form</field>
+            <field name="model">product.product</field>
             <field name="priority">3</field>
-            <field name="inherit_id" ref="product.product_template_only_form_view"/>
+            <field name="inherit_id" ref="product.product_normal_form_view"/>
             <field name="arch" type="xml">
                 <field name="type" position="after">
                     <field name="drone_type_ids" widget="many2many_tags"/>
