--- a/odoo/local-src/sf_product/views/product.xml
+++ b/odoo/local-src/sf_product/views/product.xml
@@ -7,7 +7,7 @@
             <field name="priority" eval="8"/>
             <field name="arch" type="xml">
                 <field name="uom_po_id" position="after">
-                    <field name="origin"/>
+                    <field name="origin_id"/>
                 </field>
             </field>
         </record>
