--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -76,9 +76,10 @@
           </div>
           <div class="oe_title">
             <group>
-              <h1>
-                <field name="name" class="oe_inline"/>
-              </h1>
+              <group>
+                <field name="name"/>
+                <field name="date"/>
+              </group>
             </group>
           </div>
           <group>
