Add company field on RMA

--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -125,6 +125,9 @@
               <group>
                 <field name="invoicing_method"/>
               </group>
+              <group>
+                <field name="company_id" options="{'no_create': True}" groups="base.group_multi_company"/>
+              </group>
             </page>
           </notebook>
         </sheet>
