--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -75,12 +75,9 @@
             </button>
           </div>
           <div class="oe_title">
-            <group>
-              <group>
-                <field name="name"/>
-                <field name="date"/>
-              </group>
-            </group>
+            <h1>
+              <field name="name" class="oe_inline"/>
+            </h1>
           </div>
           <group>
             <group>
@@ -89,6 +86,7 @@
               <field name="lot_id"/>
             </group>
             <group>
+              <field name="date"/>
               <field name="warranty_limit"/>
               <field name="zendesk_ref" class="oe_edit_only"/>
               <field name="zendesk_url" class="oe_read_only" widget="url"/>
