--- a/odoo/local-src/sf_partner/views/partner.xml
+++ b/odoo/local-src/sf_partner/views/partner.xml
@@ -6,7 +6,7 @@
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-          <field name="property_account_position_id" position="after">
+          <field name="lang" position="after">
               <field name="is_intragroup"/>
           </field>
         </field>
