--- a/odoo/local-src/sf_rma/views/rma_cause.xml
+++ b/odoo/local-src/sf_rma/views/rma_cause.xml
@@ -6,7 +6,7 @@
 <record id="sf_rma_cause_tree_view" model="ir.ui.view">
     <field name="model">sf.rma.cause</field>
     <field name="arch" type="xml">
-      <tree string="Cause of failure" edit="top">
+      <tree string="Cause of failure" editable="bottom">
         <field name="name"/>
       </tree>
     </field>
@@ -14,7 +14,7 @@
 
 <record id="sf_rma_cause_action" model="ir.actions.act_window">
   <field name="name">Cause of failure</field>
-  <field name="res_model">sf.rma</field>
+  <field name="res_model">sf.rma.cause</field>
   <field name="view_type">form</field>
   <field name="view_mode">tree</field>
   <field name="view_id" ref="sf_rma_cause_tree_view"/>
