--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -164,7 +164,9 @@
 
           <notebook>
             <page string="Notes">
+              <label for="problem_description" />
               <field name="problem_description"/>
+              <label for="resolution_description" />
               <field name="resolution_description"/>
             </page>
             <page string="Drone info">
