--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -39,7 +39,7 @@
         <filter string="Unread Messages" name="message_needaction" domain="[('message_needaction','=',True)]"/>
         <group expand="0" string="Group By">
             <filter string="Responsible" domain="[]" context="{'group_by':'user_id'}"/>
-            <filter name="customer" string="Customer" domain="[]" context="{'group_by':'partner_id'}"/>
+            <filter name="partner" string="Partner" domain="[]" context="{'group_by':'partner_id'}"/>
             <filter string="Month" domain="[]" context="{'group_by':'date'}"/>
         </group>
       </search>
@@ -134,8 +134,11 @@
           <group>
             <group>
               <field name="partner_id"/>
-              <field name="product_id"/>
               <field name="lot_id"/>
+              <field name="original_order_id"/>
+              <field name="original_order_products_domain" readonly="1"/>
+              <field name="product_id" domain="original_order_products_domain"/>
+              <field name="original_customer_id"/>
             </group>
             <group>
               <field name="date"/>
