--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -134,10 +134,10 @@
           <group>
             <group>
               <field name="lot_id"/>
-              <field name="original_order_id" attrs="{'readonly': [('lot_id', '!=', False)]}"/>
+              <field name="original_order_id" />
               <field name="original_order_products_domain" readonly="1" invisible="1"/>
-              <field name="product_id" domain="original_order_products_domain" attrs="{'readonly': ['|', ('original_order_id', '=', False), ('lot_id', '!=', False)]}"/>
-              <field name="original_customer_id" attrs="{'readonly': [('lot_id', '!=', False)]}"/>
+              <field name="product_id" domain="original_order_products_domain" />
+              <field name="original_customer_id" />
               <field name="partner_id"/>
             </group>
             <group>
