--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -160,16 +160,16 @@
             </group>
             <group string="Decisions">
               <field name="repair_by"/>
-              <field name="to_exchange"/>
-              <field name="to_receive"/>
-              <field name="to_invoice"/>
-              <field name="to_offer"/>
+              <field name="to_exchange" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>
+              <field name="decision" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>
+              <field name="to_invoice" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>
+              <field name="to_offer" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>/>
               <field name="offer_reason" attrs="{'invisible': [('to_offer', '=', False)], 'required': [('to_offer', '=', True)]}"/>
             </group>
           </group>
 
           <notebook>
-            <page string="Notes">
+            <page string="Zendesk">
               <label for="problem_description" />
               <field name="problem_description"/>
               <label for="resolution_description" />
