removed booleans fixed gesture note

--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -162,9 +162,7 @@
               <field name="repair_by"/>
               <field name="to_exchange" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>
               <field name="decision" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>
-              <field name="to_invoice" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>
-              <field name="to_offer" attrs="{'invisible': [('repair_by', '=', 'retailer')]}"/>/>
-              <field name="offer_reason" attrs="{'invisible': [('to_offer', '=', False)], 'required': [('to_offer', '=', True)]}"/>
+              <field name="offer_reason" attrs="{'invisible': [('decision', '=', 'to_offer')], 'required': [('to_offer', '=', True)]}"/>
             </group>
           </group>
 
