Set operations to readonly only if state is done

--- a/odoo/local-src/sf_rma_mrp_repair/views/mrp_repair.xml
+++ b/odoo/local-src/sf_rma_mrp_repair/views/mrp_repair.xml
@@ -58,6 +58,9 @@
                     <field name="invoicable_rma" invisible="1" />
                 </header>
             </xpath>
+            <xpath expr="//field[@name='operations']" position="attributes">
+                <attribute name="attrs">{'readonly': [('state', '=', 'done')]}</attribute>
+            </xpath>
         </field>
     </record>
 
