--- a/odoo/local-src/sf_account_analytic/views/account_analytic.xml
+++ b/odoo/local-src/sf_account_analytic/views/account_analytic.xml
@@ -10,5 +10,31 @@
                     <field name="user_id"/>
                 </field>
             </field>
-        </record>
+    </record>
+
+    <!-- Analytic tag -->
+    <record id="view_sf_account_analytic_tag_form_view" model="ir.ui.view">
+        <field name="name">sf.account.analytic.tag.form_view</field>
+        <field name="model">account.analytic.tag</field>
+        <field name="inherit_id" ref="analytic.account_analytic_tag_form_view"/>
+        <field name="priority" eval="200"/>
+        <field name="arch" type="xml">
+            <field name="name" position="after">
+                <field name="code" required="1"/>
+                <field name="color"/>
+            </field>
+        </field>
+    </record>
+
+    <!-- Analytic tag dimension -->
+    <record id="view_sf_account_analytic_dimension_form" model="ir.ui.view">
+        <field name="name">view.sf.account.analytic.dimension.form</field>
+        <field name="model">account.analytic.dimension</field>
+        <field name="inherit_id" ref="analytic_tag_dimension.view_AccountAnalyticDimension_form"/>
+        <field name="arch" type="xml">
+            <field name="code" position="after">
+                <field name="color"/>
+            </field>
+        </field>
+    </record>
 </odoo>
