--- a/odoo/local-src/sf_rma/views/rma.xml
+++ b/odoo/local-src/sf_rma/views/rma.xml
@@ -126,7 +126,10 @@
               class="oe_stat_button"
               icon="fa-history"
               attrs="{'invisible': [('history_rma_count', '=', 0)]}">
-              <field name="history_rma_count" widget="statinfo" string="History"/>
+              <div class="o_stat_info">
+                <span class="o_stat_text">History</span>
+                <field name="history_rma_count" class="o_stat_value" />
+              </div>
             </button>
           </div>
           <div class="oe_title">
