--- a/odoo/local-src/sf_rma_sale_order/views/sale_order.xml
+++ b/odoo/local-src/sf_rma_sale_order/views/sale_order.xml
@@ -9,7 +9,7 @@
                 <field name="rma_id" attrs="{'invisible': [('rma_id', '=', False)]}" />
             </field>
             <field name="state" position="before">
-                <button name="%(action_import_mrp_repair_lines)d" context="{'default_sale_order_id': active_id}" type="action" string="Import MRP repair lines" attrs="{'invisible': [('rma_id', '=', False), ('state', '=', 'sale')]}"/>
+                <button name="%(action_import_mrp_repair_lines)d" context="{'default_sale_order_id': active_id}" type="action" string="Import repair lines" attrs="{'invisible': ['|', ('rma_id', '=', False), ('state', '=', 'sale')]}"/>
             </field>
         </field>
     </record>
