Fix pep8 and menu loading

--- a/odoo/local-src/sf_rma/views/rma_config_settings.xml
+++ b/odoo/local-src/sf_rma/views/rma_config_settings.xml
@@ -24,4 +24,7 @@
         <field name="target">inline</field>
     </record>
 
+    <menuitem id="menu_rma_settings" name="Settings" parent="menu_rma_config"
+            sequence="0" action="action_rma_config" />
+
 </odoo>
